rs/macros/core/tests/snapshots/gservice__works_with_methods_with_lifetimes.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct ReferenceServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for ReferenceServiceExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 1u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 2u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(true)
            }
            (id, 3u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 4u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(true)
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for ReferenceServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for ReferenceServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
impl ReferenceServiceExposure<ReferenceService> {
    #[export]
    pub fn baked(&self) -> &'static str {
        "Static str!"
    }
    #[export]
    pub fn incr(&mut self) -> &'static ReferenceCount {
        unsafe {
            COUNTER.0 += 1;
            &*ptr::addr_of!(COUNTER)
        }
    }
    #[export]
    pub fn add_byte(&mut self, byte: u8) -> &'static [u8] {
        unsafe {
            BYTES.push(byte);
            &*ptr::addr_of!(BYTES)
        }
    }
    #[export]
    pub async fn first_byte<'a>(&self) -> Option<&'a u8> {
        unsafe { BYTES.first() }
    }
    #[export]
    pub async fn last_byte<'a>(&self) -> Option<&'a u8> {
        unsafe { BYTES.last() }
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::ReferenceService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: reference_service_meta::__AddByteParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.add_byte(request.byte);
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<&'static [u8]>() {
                    sails::gstd::encode_invocation_payload::<
                        reference_service_meta::__AddByteParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                1u16,
            ) if id
                == <self::ReferenceService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: reference_service_meta::__BakedParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.baked();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<&'static str>() {
                    sails::gstd::encode_invocation_payload::<
                        reference_service_meta::__BakedParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                3u16,
            ) if id
                == <self::ReferenceService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: reference_service_meta::__IncrParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.incr();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<&'static ReferenceCount>() {
                    sails::gstd::encode_invocation_payload::<
                        reference_service_meta::__IncrParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                2u16,
            ) if id
                == <self::ReferenceService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: reference_service_meta::__FirstByteParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.first_byte().await;
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<Option<&'static u8>>() {
                    sails::gstd::encode_invocation_payload::<
                        reference_service_meta::__FirstByteParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                4u16,
            ) if id
                == <self::ReferenceService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: reference_service_meta::__LastByteParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.last_byte().await;
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<Option<&'static u8>>() {
                    sails::gstd::encode_invocation_payload::<
                        reference_service_meta::__LastByteParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
}
impl sails::gstd::services::Service for ReferenceService {
    type Exposure = ReferenceServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod reference_service_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash
            .update(&sails::hash_fn!(command AddByte(u8) -> & 'static [u8]));
        final_hash = final_hash.update(&sails::hash_fn!(query Baked() -> & 'static str));
        final_hash = final_hash
            .update(&sails::hash_fn!(query FirstByte() -> Option < & 'static u8 >));
        final_hash = final_hash
            .update(&sails::hash_fn!(command Incr() -> & 'static ReferenceCount));
        final_hash = final_hash
            .update(&sails::hash_fn!(query LastByte() -> Option < & 'static u8 >));
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl sails::meta::Identifiable for super::ReferenceService {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl sails::meta::ServiceMeta for super::ReferenceService {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "AddByte",
                entry_id: 0u16,
                hash: sails::hash_fn!(command AddByte(u8) -> & 'static [u8]),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "Baked",
                entry_id: 1u16,
                hash: sails::hash_fn!(query Baked() -> & 'static str),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "FirstByte",
                entry_id: 2u16,
                hash: sails::hash_fn!(query FirstByte() -> Option < & 'static u8 >),
                is_async: true,
            },
            sails::meta::MethodMetadata {
                name: "Incr",
                entry_id: 3u16,
                hash: sails::hash_fn!(command Incr() -> & 'static ReferenceCount),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "LastByte",
                entry_id: 4u16,
                hash: sails::hash_fn!(query LastByte() -> Option < & 'static u8 >),
                is_async: true,
            },
        ];
        const ASYNC: bool = true;
    }
    sails::invocation_io!(
        pub struct __AddByteParams { pub (super) byte : u8, }, interface_id =
        __INTERFACE_ID, entry_id = 0u16,
    );
    sails::invocation_io!(
        pub struct __BakedParams {}, interface_id = __INTERFACE_ID, entry_id = 1u16,
    );
    sails::invocation_io!(
        pub struct __FirstByteParams {}, interface_id = __INTERFACE_ID, entry_id = 2u16,
    );
    sails::invocation_io!(
        pub struct __IncrParams {}, interface_id = __INTERFACE_ID, entry_id = 3u16,
    );
    sails::invocation_io!(
        pub struct __LastByteParams {}, interface_id = __INTERFACE_ID, entry_id = 4u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {
        AddByte(__AddByteParams, &'static [u8]),
        Incr(__IncrParams, &'static ReferenceCount),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {
        Baked(__BakedParams, &'static str),
        FirstByte(__FirstByteParams, Option<&'static u8>),
        LastByte(__LastByteParams, Option<&'static u8>),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
