rs/macros/core/tests/snapshots/gservice__works_with_type_generics_used_only_by_impl.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct VftMetadataExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for VftMetadataExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 1u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 2u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for VftMetadataExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for VftMetadataExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
impl<M: InfallibleStorage<Item = Metadata>> VftMetadataExposure<VftMetadata<M>> {
    #[export]
    pub fn name(&self) -> String {
        String::new()
    }
    #[export]
    pub fn symbol(&self) -> String {
        String::new()
    }
    #[export]
    pub fn decimals(&self) -> u8 {
        18
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::VftMetadata<M> as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: vft_metadata_meta::__DecimalsParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.decimals();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u8>() {
                    sails::gstd::encode_invocation_payload::<
                        vft_metadata_meta::__DecimalsParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                1u16,
            ) if id
                == <self::VftMetadata<M> as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: vft_metadata_meta::__NameParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.name();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        vft_metadata_meta::__NameParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                2u16,
            ) if id
                == <self::VftMetadata<M> as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: vft_metadata_meta::__SymbolParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.symbol();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        vft_metadata_meta::__SymbolParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            _ => None,
        }
    }
}
impl<M: InfallibleStorage<Item = Metadata>> sails::gstd::services::Service
for VftMetadata<M> {
    type Exposure = VftMetadataExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod vft_metadata_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(query Decimals() -> u8));
        final_hash = final_hash.update(&sails::hash_fn!(query Name() -> String));
        final_hash = final_hash.update(&sails::hash_fn!(query Symbol() -> String));
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl<M: InfallibleStorage<Item = Metadata>> sails::meta::Identifiable
    for super::VftMetadata<M> {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl<M: InfallibleStorage<Item = Metadata>> sails::meta::ServiceMeta
    for super::VftMetadata<M> {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "Decimals",
                entry_id: 0u16,
                hash: sails::hash_fn!(query Decimals() -> u8),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "Name",
                entry_id: 1u16,
                hash: sails::hash_fn!(query Name() -> String),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "Symbol",
                entry_id: 2u16,
                hash: sails::hash_fn!(query Symbol() -> String),
                is_async: false,
            },
        ];
        const ASYNC: bool = false;
    }
    sails::invocation_io!(
        pub struct __DecimalsParams {}, interface_id = __INTERFACE_ID, entry_id = 0u16,
    );
    sails::invocation_io!(
        pub struct __NameParams {}, interface_id = __INTERFACE_ID, entry_id = 1u16,
    );
    sails::invocation_io!(
        pub struct __SymbolParams {}, interface_id = __INTERFACE_ID, entry_id = 2u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {
        Decimals(__DecimalsParams, u8),
        Name(__NameParams, String),
        Symbol(__SymbolParams, String),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
